--- a/PhotoPicker/Base.lproj/Main.storyboard
+++ b/PhotoPicker/Base.lproj/Main.storyboard
@@ -1,25 +1,111 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="B3H-rg-qam">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PhotoPicker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sf4-1z-mXD">
+                                <rect key="frame" x="10" y="77" width="394" height="600"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lpD-x9-k0U">
+                                <rect key="frame" x="184" y="107" width="25" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xz-hd-WA0">
+                                <rect key="frame" x="0.0" y="692" width="414" height="44"/>
+                                <items>
+                                    <barButtonItem title="Pick" id="rmD-LG-ClT">
+                                        <connections>
+                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="Jqh-k1-7ws"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem systemItem="camera" id="c4q-ms-Hsw">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="Bfd-8p-bdc"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Album" id="Mt7-Rd-Pq4">
+                                        <connections>
+                                            <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="wzj-xs-dn4"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mxX-LT-eQg">
+                                <rect key="frame" x="195" y="613" width="25" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Sf4-1z-mXD" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="13" id="0xM-bu-75f"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6xz-hd-WA0" secondAttribute="trailing" constant="-20" id="8kK-dj-jLg"/>
+                            <constraint firstItem="lpD-x9-k0U" firstAttribute="centerX" secondItem="Sf4-1z-mXD" secondAttribute="centerX" constant="-10.5" id="DmZ-er-jTS"/>
+                            <constraint firstItem="6xz-hd-WA0" firstAttribute="top" secondItem="Sf4-1z-mXD" secondAttribute="bottom" constant="15" id="EWj-yT-PY1"/>
+                            <constraint firstItem="lpD-x9-k0U" firstAttribute="top" secondItem="Sf4-1z-mXD" secondAttribute="top" constant="30" id="IpW-Pu-vHd"/>
+                            <constraint firstItem="mxX-LT-eQg" firstAttribute="centerX" secondItem="Sf4-1z-mXD" secondAttribute="centerX" id="Z2v-K5-Vm7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Sf4-1z-mXD" secondAttribute="trailing" constant="-10" id="byI-8x-7Ox"/>
+                            <constraint firstItem="6xz-hd-WA0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="fui-Wa-H26"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6xz-hd-WA0" secondAttribute="bottom" id="joy-M4-R0H"/>
+                            <constraint firstItem="Sf4-1z-mXD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-10" id="sQH-5l-qNN"/>
+                            <constraint firstItem="mxX-LT-eQg" firstAttribute="bottom" secondItem="Sf4-1z-mXD" secondAttribute="bottom" constant="-34" id="uyB-3a-H4Z"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="UZY-2Z-5vW">
+                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="bhk-zn-IMq">
+                            <connections>
+                                <action selector="shareButton:" destination="BYZ-38-t0r" id="5Zc-U9-g0Y"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="5wU-Mm-Hlb"/>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="bottomText" destination="mxX-LT-eQg" id="cC1-eq-iCg"/>
+                        <outlet property="cameraButton" destination="c4q-ms-Hsw" id="aci-7H-oS1"/>
+                        <outlet property="imagePickerView" destination="Sf4-1z-mXD" id="qCS-MY-VWA"/>
+                        <outlet property="shareButton" destination="bhk-zn-IMq" id="x9C-5b-AMe"/>
+                        <outlet property="topText" destination="lpD-x9-k0U" id="1L1-nH-Sh6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1021" y="131"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="coO-Oq-yYd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="B3H-rg-qam" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XT1-iY-A40">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="51i-bW-Fha"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lCR-IX-nNs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="175" y="887"/>
         </scene>
     </scenes>
 </document>
