--- a/PhotoPicker/Base.lproj/Main.storyboard
+++ b/PhotoPicker/Base.lproj/Main.storyboard
@@ -18,28 +18,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sf4-1z-mXD">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sf4-1z-mXD">
                                 <rect key="frame" x="10" y="77" width="394" height="600"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lpD-x9-k0U">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lpD-x9-k0U">
                                 <rect key="frame" x="184" y="107" width="25" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                <connections>
+                                    <action selector="topText:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="isX-2v-Bg5"/>
+                                    <action selector="topText:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="wi6-g0-Iwm"/>
+                                </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mxX-LT-eQg">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mxX-LT-eQg">
                                 <rect key="frame" x="195" y="613" width="25" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                <connections>
+                                    <action selector="bottomText:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="IGj-Rx-kHu"/>
+                                    <action selector="bottomText:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="cvh-WB-OgO"/>
+                                </connections>
                             </textField>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xz-hd-WA0">
                                 <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                                 <items>
-                                    <barButtonItem title="Pick" id="rmD-LG-ClT">
-                                        <connections>
-                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="Jqh-k1-7ws"/>
-                                        </connections>
-                                    </barButtonItem>
                                     <barButtonItem systemItem="camera" id="c4q-ms-Hsw">
                                         <connections>
                                             <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="Bfd-8p-bdc"/>
@@ -53,7 +56,7 @@
                                 </items>
                             </toolbar>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Sf4-1z-mXD" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="13" id="0xM-bu-75f"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6xz-hd-WA0" secondAttribute="trailing" constant="-20" id="8kK-dj-jLg"/>
@@ -82,11 +85,14 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
+                        <outlet property="albumButton" destination="Mt7-Rd-Pq4" id="Lb7-us-3Fr"/>
                         <outlet property="bottomText" destination="mxX-LT-eQg" id="cC1-eq-iCg"/>
                         <outlet property="cameraButton" destination="c4q-ms-Hsw" id="aci-7H-oS1"/>
                         <outlet property="cancelButton" destination="5wU-Mm-Hlb" id="jlB-sP-9f3"/>
                         <outlet property="imagePickerView" destination="Sf4-1z-mXD" id="qCS-MY-VWA"/>
+                        <outlet property="navBar" destination="UZY-2Z-5vW" id="LMR-TB-6xc"/>
                         <outlet property="shareButton" destination="bhk-zn-IMq" id="x9C-5b-AMe"/>
+                        <outlet property="toolBar" destination="6xz-hd-WA0" id="34o-ii-0Qu"/>
                         <outlet property="topText" destination="lpD-x9-k0U" id="1L1-nH-Sh6"/>
                     </connections>
                 </viewController>
